<resources>
    <string name="app_name">CoursesCESAE</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="keep_me_logged">keep me logged</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="signup_ok">Signup OK!</string>
    <string name="signup_error">Signup Error!</string>
    <string name="please_insert_all_required_fields">Please insert all required fields</string>
    <string name="login_error">Login Error</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="developed_by_joao_cardoso">Developed by João Cardoso</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="developer_team">Developer Team</string>
    <string name="name">Name</string>
    <string name="local">Local</string>
    <string name="startdate">StartDate</string>
    <string name="course_details">Course Details</string>
    <string name="new_course">New Course</string>
    <string name="end_date">End Date</string>
    <string name="price">Price</string>
    <string name="duration">Duration</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="app_credits">App Credits</string>
    <string name="select_an_image">Select an Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="edition">Edition</string>
    <string name="self_valuation">Self Valuation:</string>
</resources>