<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image_course"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/elearning"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_weight="2"
        android:gravity="start|center_vertical"
        android:text="@string/name"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text_local"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_weight="2"
        android:gravity="start|center_vertical"
        android:text="@string/local"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_weight="2"
        android:gravity="start|center_vertical"
        android:text="@string/startdate"
        android:textSize="20sp" />


</LinearLayout>
