<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/app_credits"
       android:textSize="30sp"
       android:fontFamily="monospace"
       android:textColor="@color/white"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pp1"
        android:scaleType="center"/>

</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_by_joao_cardoso"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/text_valuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_valuation"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="18" />

</LinearLayout>